--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul class="nav-links">
                 <!-- 原网站使用罗马数字作为视觉引导 -->
                 <li><a href="#home-link" class="active">I. Home</a></li>
-                <li><a href="#about-link">II. About Tim</a></li>
+                <li><a href="#about-link">II. About Adam</a></li>
                 <li><a href="#publications-i">III. Publications I</a></li>
                 <li><a href="#publications-ii">IV. Publications II</a></li>
                 <li><a href="#media">V. Media</a></li>
@@ -31,9 +31,9 @@
     <section id="home-link" class="parallax-section hero">
         <div class="hero-overlay">
             <div class="hero-content">
-                <h1 class="main-title">TIM MAUDLIN</h1>
-                <h2 class="sub-title">FOUNDER AND DIRECTOR, JOHN BELL INSTITUTE FOR THE FOUNDATIONS OF PHYSICS</h2>
-                <h3 class="university-title">PROFESSOR OF PHILOSOPHY, NEW YORK UNIVERSITY</h3>
+                <h1 class="main-title">Adam 58433</h1>
+                <h2 class="sub-title">FOUNDER</h2>
+                <h3 class="university-title">XXXX UNIVERSITY</h3>
             </div>
         </div>
     </section>
@@ -127,9 +127,9 @@
                 <div class="separator"></div>
             </div>
             <ul class="papers-list">
-                <li><span class="paper-title">"The Pusey-Barrett-Rudolph Theorem"</span> <span class="paper-meta">- ArXiv, 2012</span></li>
-                <li><span class="paper-title">"Three Measurement Problems"</span> <span class="paper-meta">- Topoi, 1995</span></li>
-                <li><span class="paper-title">"Space-Time in the Quantum World"</span> <span class="paper-meta">- Philosophy of Physics, 2010</span></li>
+                <li><span class="paper-title">"The XXX Theorem"</span> <span class="paper-meta">- ArXiv, 201X</span></li>
+                <li><span class="paper-title">"Three XXX Problems"</span> <span class="paper-meta">- Topoi, 1995</span></li>
+                <li><span class="paper-title">"Space-Time in the XXX World"</span> <span class="paper-meta">- Philosophy of XXX, 2010</span></li>
                 <li class="more-link"><a href="#">[View Full CV]</a></li>
             </ul>
         </div>
@@ -144,7 +144,7 @@
                     <div class="separator white-sep"></div>
                 </div>
                 <div class="media-content">
-                    <p>Interviews, Debates, and Lectures featuring Tim Maudlin.</p>
+                    <p>Interviews, Debates, and Lectures featuring XXX.</p>
                     <div class="media-buttons">
                         <a href="#" class="btn btn-outline">Closer To Truth</a>
                         <a href="#" class="btn btn-outline">YouTube Channel</a>
@@ -163,16 +163,16 @@
             </div>
             <div class="contact-info">
                 <p class="contact-role">Founder and Director</p>
-                <p class="contact-org">John Bell Institute for the Foundations of Physics</p>
+                <p class="contact-org">XXX Institute for the Foundations</p>
                 <br>
-                <p class="contact-role">Professor of Philosophy</p>
-                <p class="contact-org">New York University</p>
+                <p class="contact-role">Doctor of Philosophy</p>
+                <p class="contact-org">XXX University</p>
                 <br>
-                <a href="mailto:TimMaudlin@JohnBellinstitute.org" class="email-link">TimMaudlin@JohnBellinstitute.org</a>
+                <a href="mailto:XXX@XXX.org" class="email-link">XXX@XXX.org</a>
             </div>
             
             <div class="footer-copyright">
-                &copy; 2026 Tim Maudlin. All Rights Reserved.
+                &copy; 2026 XXX. All Rights Reserved.
             </div>
         </div>
     </section>
