--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
     </section>
 
-    <!-- 第二部分：About Tim (内容已替换为占位符) -->
+    <!-- 第二部分：About Him (内容已替换为占位符) -->
     <section id="about-link" class="content-section about-section">
         <div class="container">
             <div class="section-header">
@@ -82,37 +82,37 @@
                 <!-- Book 1 -->
                 <div class="book-card">
                     <div class="book-cover-placeholder" style="background-color: #2c3e50;">
-                        <span>Quantum Non-Locality & Relativity</span>
+                        <span>XXX Non-Locality & Relativity</span>
                     </div>
-                    <h4>Quantum Non-Locality and Relativity</h4>
-                    <p class="publisher">Blackwell, 3rd Edition</p>
+                    <h4>XXX Non-Locality and Relativity</h4>
+                    <p class="publisher">XXX, 1st Edition</p>
                 </div>
                 
                 <!-- Book 2 -->
                 <div class="book-card">
                     <div class="book-cover-placeholder" style="background-color: #c0392b;">
-                        <span>Truth and Paradox</span>
+                        <span>ABC and DEF</span>
                     </div>
-                    <h4>Truth and Paradox</h4>
-                    <p class="publisher">Oxford University Press</p>
+                    <h4>ABC and DEF</h4>
+                    <p class="publisher">ABC University Press</p>
                 </div>
 
                 <!-- Book 3 -->
                 <div class="book-card">
                     <div class="book-cover-placeholder" style="background-color: #27ae60;">
-                        <span>The Metaphysics Within Physics</span>
+                        <span>The XXX Within Physics</span>
                     </div>
-                    <h4>The Metaphysics Within Physics</h4>
-                    <p class="publisher">Oxford University Press</p>
+                    <h4>The XXX Within Physics</h4>
+                    <p class="publisher">XXX University Press</p>
                 </div>
 
                 <!-- Book 4 -->
                 <div class="book-card">
                     <div class="book-cover-placeholder" style="background-color: #f39c12;">
-                        <span>Philosophy of Physics: Space and Time</span>
+                        <span>Philosophy of XXX: Space and Time</span>
                     </div>
-                    <h4>Philosophy of Physics</h4>
-                    <p class="publisher">Princeton University Press</p>
+                    <h4>Philosophy of XXX</h4>
+                    <p class="publisher">XXX University Press</p>
                 </div>
             </div>
         </div>
