Update title and About section for Adam

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tim Maudlin | Philosopher of Physics</title>
+    <title>Adam58433 | Philosopher of XXX</title>
     <link rel="stylesheet" href="style.css">
     <!-- 引入类似原网站的字体 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -38,11 +38,11 @@
         </div>
     </section>
 
-    <!-- 第二部分：About Him (内容已替换为占位符) -->
+    <!-- 第二部分：About Adam (内容已替换为占位符) -->
     <section id="about-link" class="content-section about-section">
         <div class="container">
             <div class="section-header">
-                <h2>About Tim</h2>
+                <h2>About Adam</h2>
                 <div class="separator"></div>
             </div>
             
